--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -7,6 +7,7 @@ import { TextColors } from "./text-colors/text-colors";
 import { BorderColors } from "./border-colors/border-colors";
 import { ContentColors } from "./content-colors/content-colors";
 import { cardColorsExample, menuColorsExample } from "./assets";
+import { ComponentNameDecorator } from "../../components";
 import classes from "./colors.stories.module.scss";
 
 <Meta
@@ -15,9 +16,9 @@ import classes from "./colors.stories.module.scss";
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>
+<ComponentNameDecorator withFoundationBackground>
   Colors
-</ComponentName>
+</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Color keys](#color-keys)
