--- a/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName } from "../../components";
+import { ComponentNameDecorator } from "../../components";
 import { AnimationOverviews } from "./animation-overviews/animation-overviews";
 import { DurationProductiveTokens } from "./duration-productive-tokens/duration-productive-tokens";
 import { DurationExpressiveTokens } from "./duration-expressive-tokens/duration-expressive-tokens";
@@ -20,7 +20,7 @@ import {
 
 <Meta title="Foundations/Motion" />
 
-<ComponentName withFoundationBackground>Motion</ComponentName>
+<ComponentNameDecorator withFoundationBackground>Motion</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Implementation](#implementation---duration-and-ease)
