--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -4,14 +4,14 @@ import { TextColors } from "../colors/text-colors/text-colors";
 import { TextStyles } from "./text-styles/text-styles";
 import { COLORS, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { typographyExample1, typographyExample2 } from "./assets";
-import { AlphaWarning } from "../../components/alpha-warning/alpha-warning";
+import { AlphaWarning, ComponentNameDecorator } from "../../components";
 import "./typography.scss";
 
 <Meta title="Foundations/Typography" />
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>Typography</ComponentName>
+<ComponentNameDecorator withFoundationBackground>Typography</ComponentNameDecorator>
 
 <AlphaWarning />
 
