--- a/src/storybook/stand-alone-documentaion/round-corners/round-corners.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/round-corners/round-corners.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName } from "../../components";
+import { ComponentNameDecorator } from "../../components";
 import CornersSettings from "./corners-settings/corner-settings";3
 import RoundedCorner from "./rounded-corner/rounded-corner";
 import { COLORS, SPACING, TYPOGRAPHY } from "../../components/related-components/component-description-map";
@@ -11,9 +11,9 @@ import classes from "./round-corners.stories.module.scss";
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>
+<ComponentNameDecorator withFoundationBackground>
   RoundCorners
-</ComponentName>
+</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Up next](#up-next)
