--- a/src/storybook/stand-alone-documentaion/shadow/shadow.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/shadow/shadow.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName } from "../../components";
+import { ComponentNameDecorator } from "../../components";
 import { ShadowLevels } from "./shadow-levels/shadow-levels";
 import { shadowsSketch } from "./assets";
 import { CardShadowExample } from "./card-shadow-example/card-shadow-example";
@@ -13,9 +13,9 @@ import "./shadow.stories.scss";
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>
+<ComponentNameDecorator withFoundationBackground>
   Shadow
-</ComponentName>
+</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Shadow levels](#shadow-levels)
