--- a/src/storybook/stand-alone-documentaion/spacing/spacing.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 import { SpacingSizes } from "./spacing-sizes/spacing-sizes";
-import { ComponentName } from "../../components";
+import { ComponentNameDecorator } from "../../components";
 import { Frame } from "monday-ui-storybook-blocks";
 import { menuExample, tipseenExample, toolbarExample } from "./assets";
 import { COLORS, TYPOGRAPHY, SHADOW } from "../../components/related-components/component-description-map";
@@ -12,9 +12,9 @@ import "./spacing.stories.scss";
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>
+<ComponentNameDecorator withFoundationBackground>
   Spacing
-</ComponentName>
+</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Spacing sizes](#spacing-sizes)
