--- a/src/components/Avatar/__stories__/avatar.stories.mdx
+++ b/src/components/Avatar/__stories__/avatar.stories.mdx
@@ -61,7 +61,7 @@ Avatar is a graphical representation of a person through a profile picture, imag
     name="Overview"
     args={{
       size: Avatar.sizes.LARGE,
-      src: window.location.origin + '/' + person1,
+      src: window.location.origin + "/" + person1,
       type: Avatar.types.IMG,
       ariaLabel: "Hadas Fahri"
     }}
@@ -150,39 +150,6 @@ Use when a user’s image is not available, use their initials.
   </Story>
 </Canvas>
 
-### Initials avatar custom text format
-
-While Default initials typography sizes and styles do not suit the design use this custom class to customize it.
-
-<Canvas>
-  <Story name="Avatar with formatted text">
-    <Avatar
-      size={Avatar.sizes.SMALL}
-      type={Avatar.types.TEXT}
-      text="RM"
-      backgroundColor={Avatar.colors.BRIGHT_BLUE}
-      textClassName="text-formatted--small"
-      ariaLabel="Ron Meir"
-    />
-    <Avatar
-      size={Avatar.sizes.MEDIUM}
-      type={Avatar.types.TEXT}
-      text="RM"
-      backgroundColor={Avatar.colors.LIPSTICK}
-      textClassName="text-formatted--medium"
-      ariaLabel="Ron Meir"
-    />
-    <Avatar
-      size={Avatar.sizes.LARGE}
-      type={Avatar.types.TEXT}
-      text="RM"
-      backgroundColor={Avatar.colors.DONE_GREEN}
-      textClassName="text-formatted--large"
-      ariaLabel="Ron Meir"
-    />
-  </Story>
-</Canvas>
-
 ### Square avatar with icon or text
 
 Use for non-person avatars, such as a workspace or team.
@@ -234,9 +201,24 @@ Use for non-person avatars, such as a workspace or team.
       negative: {
         component: (
           <div className="monday-storybook-avatar_multiple-reverse">
-            <Avatar className="multiple-reverse-avatar" size={Avatar.sizes.SMALL} src={person1} type={Avatar.types.IMG} />
-            <Avatar className="multiple-reverse-avatar" size={Avatar.sizes.MEDIUM} src={person2} type={Avatar.types.IMG} />
-            <Avatar className="multiple-reverse-avatar" size={Avatar.sizes.LARGE} src={person3} type={Avatar.types.IMG} />
+            <Avatar
+              className="multiple-reverse-avatar"
+              size={Avatar.sizes.SMALL}
+              src={person1}
+              type={Avatar.types.IMG}
+            />
+            <Avatar
+              className="multiple-reverse-avatar"
+              size={Avatar.sizes.MEDIUM}
+              src={person2}
+              type={Avatar.types.IMG}
+            />
+            <Avatar
+              className="multiple-reverse-avatar"
+              size={Avatar.sizes.LARGE}
+              src={person3}
+              type={Avatar.types.IMG}
+            />
           </div>
         ),
         description: "Avoid using a mix of avatar sizes that display together and create design imbalance."
@@ -375,7 +357,6 @@ To group multiple Avatars together, use the <Link href="/?path=/docs/media-avata
     </AvatarGroup>
   </Story>
 </Canvas>
-
 
 ## Related components
 
