Chips: Add WARNING color (#1431)
* Chips: Add WARNING color

* Utilize `StateSelectedColor`

* cr

--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -109,8 +109,9 @@ Chips are compact elements that represent an input, attribute, or action. They m
 <Canvas>
   <Story name="Themes">
     <Chips label="This is a long chip" />
-    <Chips label="Chip negative" color={Chips.colors.NEGATIVE} />
     <Chips label="Chip positive" color={Chips.colors.POSITIVE} />
+    <Chips label="Chip negative" color={Chips.colors.NEGATIVE} />
+    <Chips label="Chip warning" color={Chips.colors.WARNING} />
     <Chips label="Disabled" disabled />
   </Story>
 </Canvas>
