--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -212,7 +212,7 @@ There are five types of attention boxes: Primary, success, danger, warning and d
         description: "Provide a short and brief title, and explanation related to the title."
       },
       negative: {
-        component: <AttentionBox title="Attention box title" />,
+        component: <AttentionBox title="Attention box title" className="monday-storybook-attention-box_box" />,
         description: "Don’t use only a title to explain something."
       }
     },
