convert current usage according to API changes

--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -307,12 +307,12 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
           <Flex gap={Flex.gaps.XS}>
             <Link withoutSpacing>Hadas Farhi</Link>
             <span>deleted the item </span>
-            <Text element="span" weight="bold" className={classes.recycleBinItemName}>
+            <Text type="text1" element="span" weight="medium" className={classes.recycleBinItemName}>
               Hello World
             </Text>
             <span>from the board</span>
           </Flex>
-          <Text element="span" weight="bold">
+          <Text type="text1" element="span" weight="medium">
             Tasks
           </Text>
           <Flex gap={Flex.gaps.XS} className={classes.recycleBinSubNote}>
