--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -1,34 +1,30 @@
+import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { createStoryMetaSettingsDecorator, Tip, AlphaWarning } from "../../../storybook";
+import Flex from "../../Flex/Flex";
+import { createComponentTemplate } from "vibe-storybook-components";
 import Heading from "../Heading";
-import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createStoryMetaSettingsDecorator } from "../../../storybook";
-import { Link, createComponentTemplate } from "vibe-storybook-components";
-import Divider from "../../Divider/Divider";
-import Search from "../../Search/Search";
-import Checkbox from "../../Checkbox/Checkbox";
-import Button from "../../Button/Button";
-import { Custom } from "../../Icon/Icons";
-import { emptyStateExample } from "./assets";
-import {
-  EDITABLE_HEADING,
-  SEARCH,
-  TEXT_FIELD
-} from "../../../storybook/components/related-components/component-description-map";
+import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tests__/heading-tests-constants";
 import styles from "./Heading.stories.module.scss";
+import { titleOverflowSuite } from "../__tests__/Heading.interactions";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: Heading,
-  enumPropNamesArray: ["type", "size"]
+  enumPropNamesArray: ["types", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
+  iconPropNamesArray: [], // List props that are typed as icons here
+  actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Heading" component={Heading} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Title" component={Heading} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
-export const headingTemplate = createComponentTemplate(Heading);
+export const textTemplate = createComponentTemplate(Heading);
+
+# Title
+
+<AlphaWarning />
 
 <!--- Component documentation -->
-
-# Heading
 
 - [Overview](#overview)
 - [Props](#props)
@@ -41,11 +37,11 @@ export const headingTemplate = createComponentTemplate(Heading);
 
 ## Overview
 
-Heading components are used to title any page sections or sub-sections in top-level page sections.
+Title components are used to title any page sections or sub-sections in top-level page sections.
 
 <Canvas>
-  <Story name="Overview" args={{ value: "Hello world" }}>
-    {headingTemplate.bind({})}
+  <Story name="Overview" args={{ children: "Title" }}>
+    {textTemplate.bind({})}
   </Story>
 </Canvas>
 
@@ -55,156 +51,110 @@ Heading components are used to title any page sections or sub-sections in top-le
 
 ## Usage
 
-<UsageGuidelines
-  guidelines={[
-    "Never include more than one H1 title per web page.",
-    "Heading always should be linked to content (by design and by implementation by passing the heading id to the content's aria-labelledBy attribute)."
-  ]}
-/>
+<UsageGuidelines guidelines={["Usage guideline 1", "Usage guideline 2", "Usage guideline 3"]} />
 
-<Tip title="Not what you were looking for?">
-  Please check out our{" "}
-  <Link href="/?path=/docs/inputs-editableheading--overview" withoutSpacing>
-    EditableHeading
-  </Link>{" "}
-  component if you would like to allow users to edit the title text..
-</Tip>
+<Tip title="Not what you were looking for?">Tip content</Tip>
 
 ## Variants
 
-### Sizes
+### Types and weights
 
 <Canvas>
-  <Story name="Sizes">
-    <div style={{ display: "flex", flexDirection: "column" }}>
-      <Heading type={Heading.types.h1} value="Hello H1" />
-      <Heading type={Heading.types.h1} value="Hello H1 medium" size="medium" />
-      <Heading type={Heading.types.h2} value="Hello H2" />
-      <Heading type={Heading.types.h2} value="Hello H2 small" size="small" />
-      <Heading type={Heading.types.h3} value="Hello H3" />
-      <Heading type={Heading.types.h4} value="Suggest Edit H4" suggestEditOnHover />
-      <Heading type={Heading.types.h5} value="H5 with tooltip" nonEllipsisTooltip="Click to edit" />
-    </div>
+  <Story name="Types and weights">
+    <Flex
+      gap={Flex.gaps.SMALL}
+      direction={Flex.directions.COLUMN}
+      justify={Flex.justify.START}
+      align={Flex.align.START}
+    >
+      <Heading type="h1" weight="bold">
+        Bold H1 title
+      </Heading>
+      <Heading type="h1" weight="normal">
+        Normal H1 title
+      </Heading>
+      <Heading type="h1" weight="light">
+        Light H1 title
+      </Heading>
+      <Heading type="h2" weight="bold">
+        Bold H2 title
+      </Heading>
+      <Heading type="h2" weight="normal">
+        Normal H2 title
+      </Heading>
+      <Heading type="h2" weight="light">
+        Light H2 title
+      </Heading>
+      <Heading type="h3" weight="bold">
+        Bold H3 title
+      </Heading>
+      <Heading type="h3" weight="normal">
+        Normal H3 title
+      </Heading>
+      <Heading type="h3" weight="light">
+        Light H3 title
+      </Heading>
+    </Flex>
+  </Story>
+</Canvas>
+
+### Colors
+
+<Canvas>
+  <Story name="Colors">
+    <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
+      <Heading color="primary">Primary title</Heading>
+      <Heading color="secondary">Secondary title</Heading>
+      <Heading element="div" className={styles.primaryBackground} align="center" color="onPrimary">
+        On primary title
+      </Heading>
+      <Heading element="div" className={styles.invertedBackground} align="center" color="onInverted">
+        On inverted title
+      </Heading>
+    </Flex>
   </Story>
 </Canvas>
 
 ### Overflow
 
-Our heading component support overflow state.
-When the heading text is too long and the component includes an ellipsis flag, we will cut the end of the heading and display instead of it "...".
+Our Text component support overflow state.
+When the text is too long and the component includes an ellipsis flag, we will cut the end of the heading and display instead of it "...".
 
 <Canvas>
-  <Story name="Overflow">
-    <div style={{ display: "flex", flexDirection: "column", width: "70%" }}>
+  <Story name="Overflow" play={titleOverflowSuite}>
+    <Flex
+      id={OVERFLOW_TITLE_CONTAINER_ID}
+      direction={Flex.directions.COLUMN}
+      gap={Flex.gaps.MEDIUM}
+      align={Flex.align.STRETCH}
+      style={{ width: "70%" }}
+    >
+      <Heading ellipsis={false}>
+        Title without overflow title without overflow title without overflow title without overflow title without
+        overflow title without overflow title without overflow
+      </Heading>
       <Heading
-        type={Heading.types.h2}
-        value="Heading without overflow heading without overflow heading without overflow"
-        ellipsis={false}
-        nonEllipsisTooltip="Non ellipsis tooltip"
-      />
-      <Heading
-        type={Heading.types.h2}
-        value="Heading with overflow heading with overflow heading with overflow heading with overflow heading with overflow"
         ellipsis
-        nonEllipsisTooltip="Non ellipsis tooltip (this tooltip is not shown since overflow)"
-      />
-      <div>
-        <Heading
-          type={Heading.types.h2}
-          value="Heading with overflow when text is longer then 2 lines heading with overflow when text is longer then 2 lines heading with overflow when text is longer then 2 lines"
-          ellipsisMaxLines={2}
-          nonEllipsisTooltip="Non ellipsis tooltip (this tooltip is not shown since overflow)"
-        />
-      </div>
-    </div>
-  </Story>
-</Canvas>
-
-### With text highlight
-
-Our heading component support text highlight.
-
-<Canvas>
-  <Story name="Text Highlight">
-    <div style={{ display: "flex", flexDirection: "column", width: "70%" }}>
-      <Heading
-        type={Heading.types.h2}
-        highlightTerm="heading highlight"
-        value="Heading with highlight text heading with highlight text without overflow"
-        ellipsis={false}
-        nonEllipsisTooltip="Tooltip when no overflow"
-      />
-      <Heading
-        type={Heading.types.h2}
-        highlightTerm="heading highlight"
-        value="Heading with highlight text heading with highlight text heading with highlight text heading with highlight text"
-        nonEllipsisTooltip="Non ellipsis tooltip (this tooltip is not shown since overflow)"
-      />
-      <Heading
-        type={Heading.types.h2}
-        highlightTerm="heading highlight"
-        value="Heading with highlight text when text is longer then 2 lines heading with overflow when text is longer then 2 lines heading with overflow when text is longer then 2 lines"
-        ellipsisMaxLines={2}
-      />
-    </div>
-  </Story>
-</Canvas>
-
-## Do’s and Don’ts
-
-<ComponentRules
-  rules={[
-    {
-      positive: {
-        component: <Heading value="Hello world" />,
-        description: "Always capitalize the first letter of the first word in the heading."
-      },
-      negative: {
-        component: <Heading value="Hello World" />,
-        description: "Please avoid capitalizing the first letter of each word in the heading."
-      }
-    }
-  ]}
-/>
-
-## Use cases and examples
-
-### Not editable header of a page
-
-<Canvas>
-  <Story name="Not editable header of a page">
-    <div style={{ width: "100%" }}>
-      <Heading type={Heading.types.h1} value="My Work" id="my-work-id" />
-      <Divider />
-      <div
-        className={styles["page-header_commands"]}
-        style={{ display: "flex", alignItems: "center" }}
-        aria-labelledby="my-work-id"
+        /**for testing purposes**/
+        data-testid={ONE_LINE_ELLIPSIS_TEST_ID}
+        tooltipProps={{
+          containerSelector: `#${OVERFLOW_TITLE_CONTAINER_ID}`
+        }}
       >
-        <Search wrapperClassName={styles["page-header_search"]} placeholder="Search" />
-        <Checkbox label="Hide done items" checked />
-        <Button leftIcon={Custom} kind={Button.kinds.TERTIARY}>
-          Customize
-        </Button>
+        Title with overflow title with overflow title with overflow title with overflow title with overflow title with
+        overflow title with overflow title with overflow title with overflow title with overflow
+      </Heading>
+      <div>
+        <Heading ellipsis withoutTooltip maxLines={2}>
+          Title with overflow title with overflow title with overflow title with overflow title with overflow title with
+          overflow title with overflow title with overflow title with overflow title with overflow title with overflow
+          title with overflow title with overflow title with overflow title with overflow title with overflow
+        </Heading>
       </div>
-    </div>
-  </Story>
-</Canvas>
-
-### Empty state title
-
-<Canvas>
-  <Story name="Empty state title">
-    <div className={styles["empty-state-container"]} aria-labelledby="empty-state-id">
-      <img style={{ width: "290px" }} src={emptyStateExample} alt="" />
-      <Heading type={Heading.types.h2} id="empty-state-id" value="No updates yet for this item" />
-      <span style={{ width: "50%", textAlign: "center" }}>
-        Be the first one to update about progress, mention someone or upload files to share with your team members
-      </span>
-    </div>
+    </Flex>
   </Story>
 </Canvas>
 
 ## Related components
 
-<RelatedComponents componentsNames={[EDITABLE_HEADING, TEXT_FIELD, SEARCH]} />
+<RelatedComponents componentsNames={[]} />
